.kontinuous/env/prod/templates/redirects.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://covid-19.sante.gouv.fr
  labels:
    app.kubernetes.io/instance: prod-covid
    app.kubernetes.io/name: covid
    app.kubernetes.io/part-of: covid
    app.kubernetes.io/version: "1"
    owner: covid
    team: covid
  name: www-redirect
  namespace: covid
spec:
  rules:
    - host: www.covid-19.sante.gouv.fr
    - host: covid19.sante.gouv.fr
    - host: www.covid19.sante.gouv.fr
  tls:
    - hosts:
        - www.covid-19.sante.gouv.fr
        - covid19.sante.gouv.fr
        - www.covid19.sante.gouv.fr
      secretName: covid-19-sante-gouv-fr-2023
